Fixed dark mode

--- a/src/beech.css
+++ b/src/beech.css
@@ -1,5 +1,5 @@
 :root {
-  --beech-color--white: #FFF;
+  --beech--color--white: #FFF;
   --beech--color--off-black: #111414;
   --beech--color--mid-gray: #747474;
   --beech--color--light-gray: #A8A8A8;
